[package]
name = "agntcy-slim-service"
edition = { workspace = true }
license = { workspace = true }
version = "0.11.6"
description = "Main service and public API to interact with SLIM data plane."

[lib]
name = "slim_service"
crate-type = ["lib"]

[features]
default = ["session"]
kubernetes = ["agntcy-slim-datapath/kubernetes"]
session = ["agntcy-slim-session", "agntcy-slim-persistence"]
slim-config = ["dirs", "serde_yaml", "humantime-serde"]

[dependencies]
agntcy-slim-version = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
agntcy-slim-auth = { workspace = true }
agntcy-slim-config = { workspace = true }
agntcy-slim-controller = { workspace = true }
agntcy-slim-datapath = { workspace = true }
agntcy-slim-mls = { workspace = true }
agntcy-slim-persistence = { workspace = true, optional = true }
agntcy-slim-session = { workspace = true, optional = true }
async-trait = { workspace = true }
dirs = { workspace = true, optional = true }
humantime-serde = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
display-error-chain = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
twox-hash = { workspace = true }
uuid = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
agntcy-slim-testing = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
test-fork = { workspace = true }
tokio-test = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
