[package]
name = "agntcy-slim-session"
edition = { workspace = true }
license = { workspace = true }
version = "0.6.0"
description = "SLIM session internal implementation."

[lib]
name = "slim_session"

[dependencies]
agntcy-slim-auth = { workspace = true }
agntcy-slim-datapath = { workspace = true }
agntcy-slim-mls = { workspace = true }
agntcy-slim-persistence = { workspace = true }
agntcy-slim-version = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
display-error-chain = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
trait-variant = { workspace = true }
twox-hash = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
maybe-async = { workspace = true, features = ["is_sync"] }
tokio = { workspace = true }
tonic = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
maybe-async = { workspace = true }
tokio = { package = "tokio_with_wasm", version = "0.9", features = ["sync", "macros", "rt", "time"] }
tonic = { version = "0.14", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
agntcy-slim-testing = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
tracing-test = { workspace = true }

[[bench]]
name = "header_integrity"
harness = false
