[package]
name = "agntcy-slim-signal"
edition = { workspace = true }
license = { workspace = true }
version = "0.1.15"
description = "Small library to handle OS signals."

[lib]
name = "slim_signal"

[dependencies]
agntcy-slim-version = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["macros", "signal"] }

