[package]
name = "agntcy-slim-bindings"
version = "2.0.0-alpha.5"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "UniFFI bindings and FFI adapter for SLIM data plane - enables language integrations (Go, Swift, Kotlin, etc.)"

[lib]
name = "slim_bindings"

[dependencies]
agntcy-slim = { workspace = true }
agntcy-slim-auth = { workspace = true }
agntcy-slim-config = { workspace = true }
agntcy-slim-controller = { workspace = true }
agntcy-slim-datapath = { workspace = true }
agntcy-slim-rpc = { workspace = true, features = ["uniffi"] }
agntcy-slim-service = { workspace = true, features = ["session"] }
agntcy-slim-session = { workspace = true }
agntcy-slim-signal = { workspace = true }
agntcy-slim-tracing = { workspace = true }
agntcy-slim-version = { workspace = true }

async-trait = { workspace = true }
display-error-chain = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uniffi = { workspace = true, features = ["cli"] }

[build-dependencies]
agntcy-slim-version = { workspace = true }
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
clap = { workspace = true }
test-fork = { workspace = true }

[[example]]
name = "receiver"
path = "examples/receiver.rs"

[[example]]
name = "sender"
path = "examples/sender.rs"
