[package]
name = "agntcy-slim-bindings"
version = "2.0.0-alpha.9"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "UniFFI bindings and FFI adapter for SLIM data plane - enables language integrations (Go, Swift, Kotlin, etc.)"

[lib]
name = "slim_bindings"

[features]
default = ["native"]
# Full desktop/mobile bindings, including services, configuration, and SLIMRPC.
native = []
# Browser-safe UniFFI surface. The web generator builds with default features
# disabled so native-only service/configuration modules are not exported.
web = []

[dependencies]
display-error-chain = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
twox-hash = { workspace = true }
uniffi = { workspace = true, features = ["cli", "wasm-unstable-single-threaded"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
agntcy-slim = { workspace = true }
agntcy-slim-auth = { workspace = true }
agntcy-slim-config = { workspace = true }
agntcy-slim-controller = { workspace = true }
agntcy-slim-datapath = { workspace = true }
agntcy-slim-service = { workspace = true, features = ["session"] }
agntcy-slim-session = { workspace = true }
agntcy-slim-signal = { workspace = true }
agntcy-slim-tracing = { workspace = true }
agntcy-slim-version = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
agntcy-slim-auth = { workspace = true }
agntcy-slim-config = { workspace = true }
agntcy-slim-datapath = { workspace = true }
agntcy-slim-session = { workspace = true }
agntcy-slim-version = { workspace = true }
tokio = { package = "tokio_with_wasm", version = "0.9", features = ["sync", "time"] }
wasm-bindgen-futures = { workspace = true }

[build-dependencies]
agntcy-slim-version = { workspace = true }
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
clap = { workspace = true }
test-fork = { workspace = true }

[[example]]
name = "receiver"
path = "examples/receiver.rs"

[[example]]
name = "sender"
path = "examples/sender.rs"
