[package]
name = "agntcy-slim-testing"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
publish = false

[lib]
name = "slim_testing"

[[bin]]
name = "channel"
path = "src/bin/channel.rs"

[[bin]]
name = "test-group"
path = "src/bin/test_group.rs"

[[bin]]
name = "test-p2p"
path = "src/bin/test_p2p.rs"

[[bin]]
name = "stress-publish"
path = "src/bin/stress_publish.rs"

[[bin]]
name = "stress-session"
path = "src/bin/stress_session.rs"

[[bin]]
name = "sender-app"
path = "src/bin/sender_app.rs"

[[bin]]
name = "receiver-app"
path = "src/bin/receiver_app.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
agntcy-slim = { workspace = true }
agntcy-slim-auth = { workspace = true }
agntcy-slim-config = { workspace = true }
agntcy-slim-datapath = { workspace = true }
agntcy-slim-service = { workspace = true, features = ["session"] }
agntcy-slim-session = { workspace = true }
agntcy-slim-tracing = { workspace = true }
anyhow = { workspace = true }
aws-lc-rs = { workspace = true }
base64 = { workspace = true }
bollard = { version = "0.17" }
bytes = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
libc = { version = "0.2.177" }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
uuid = { workspace = true }
wiremock = { workspace = true }
