[package]
name = "agntcy-slim-tracing"
edition = { workspace = true }
license = { workspace = true }
version = "0.4.8"
description = "Observability for SLIM data plane: logs, traces and metrics infrastructure."

[lib]
name = "slim_tracing"

[features]
default = []
# W3C trace-context propagation for browser clients (no OTLP export).
otel_tracing = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]

[dependencies]
agntcy-slim-version = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
agntcy-slim-config = { workspace = true }
cfg-if = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-stdout = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }
opentelemetry = { workspace = true, optional = true }
# `rt-tokio` from the workspace preset is native-only; trace-only is enough here.
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = [
    "trace",
], optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-web = "0.1"
