[package]
name = "slim-examples"
version = "0.1.0"
edition = { workspace = true }
publish = false

[[bin]]
name = "sdk-mock"
path = "src/sdk-mock/main.rs"

[[bin]]
name = "authzen-demo"
path = "src/authzen-demo/main.rs"

[dependencies]
agntcy-slim = { workspace = true }
agntcy-slim-auth = { workspace = true }
agntcy-slim-config = { workspace = true }
agntcy-slim-datapath = { workspace = true }
agntcy-slim-mls = { workspace = true }
agntcy-slim-service = { workspace = true }
agntcy-slim-signal = { workspace = true }
clap = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wiremock = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
