[package]
name = "slim-examples"
version = "0.1.0"
edition = { workspace = true }
publish = false

[[bin]]
name = "sdk-mock"
path = "src/sdk-mock/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
agntcy-slim = { workspace = true }
agntcy-slim-auth = { workspace = true }
agntcy-slim-config = { workspace = true }
agntcy-slim-controller = { workspace = true }
agntcy-slim-datapath = { workspace = true }
agntcy-slim-mls = { workspace = true }
agntcy-slim-service = { workspace = true }
agntcy-slim-session = { workspace = true }
agntcy-slim-signal = { workspace = true }
agntcy-slim-testing = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
