[package]
name = "slim-examples"
version = "0.1.0"
edition = { workspace = true }
publish = false

[[bin]]
name = "sdk-mock"
path = "src/sdk-mock/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
agntcy-slim = { workspace = true }
agntcy-slim-auth = { workspace = true, features = ["native"] }
agntcy-slim-config = { workspace = true, features = ["native"] }
agntcy-slim-controller = { workspace = true, features = ["native"] }
agntcy-slim-datapath = { workspace = true, features = ["native"] }
agntcy-slim-mls = { workspace = true, features = ["native"] }
agntcy-slim-service = { workspace = true, features = ["native", "session"] }
agntcy-slim-session = { workspace = true, features = ["native"] }
agntcy-slim-signal = { workspace = true, features = ["native"] }
agntcy-slim-testing = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
display-error-chain = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
