[package]
name = "agp-mcp-proxy"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
agp-config = { workspace = true }
agp-datapath = { workspace = true }
agp-gw = { workspace = true }
agp-service = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
futures-util = { workspace = true }
rand = { workspace = true }
rmcp =  { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
