[package]
name = "agp-bindings"
edition = "2021"
license = { workspace = true }
publish = false
version = "0.1.0"

[lib]
name = "agp_bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]
agp-config = { path = "../gateway/config" }
agp-datapath = { path = "../gateway/datapath" }
agp-service = { path = "../gateway/service" }
agp-tracing = { path = "../gateway/tracing" }
pyo3 = "0.23.3"
pyo3-async-runtimes = { version = "0.23.0", features = ["tokio-runtime"] }
pyo3-stub-gen = "0.7.0"
rand = "0.9.0"
tokio = "1.43.0"
tonic = "0.12"
