[package]
name = "slim-bindings"
edition = { workspace = true }
license = { workspace = true }
publish = false
version = "0.1.0"

[package.metadata.maturin]
name = "pydantic_core._pydantic_core"

[lib]
name = "_slim_bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
pyo3-stub-gen = { workspace = true }
rand = { workspace = true }
serde-pyobject = { workspace = true }
slim-config = { workspace = true }
slim-datapath = { workspace = true }
slim-service = { workspace = true }
slim-tracing = { workspace = true }
tokio = { workspace = true }
