[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "agp-bindings"
version = "0.1.3"
description = "AGP Rust bindings for Python"
requires-python = ">=3.9, <4.0"
readme = "README.md"

[dependency-groups]
building = [
    "maturin",
]

testing = [
    "pytest",
    "pytest-asyncio",
]

linting = [
    'griffe',
    'pyright',
    'ruff',
    'mypy',
]

[tool.uv]
default-groups = [
    "building",
    "testing",
    "linting",
]

[tool.maturin]
bindings = 'pyo3'
features = ["pyo3/extension-module"]
module-name = "agp_bindings._agp_bindings"

[tool.ruff.format]
quote-style = 'single'

[tool.pytest.ini_options]
testpaths = 'tests'

[tool.ruff]
line-length = 120
target-version = 'py39'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I', 'UP']
extend-ignore = [
    'E721',  # using type() instead of isinstance() - we use this in tests
]
flake8-quotes = {inline-quotes = 'double', multiline-quotes = 'double'}
mccabe = { max-complexity = 13 }
isort = { known-first-party = ['agp_bindings', 'tests'] }
