[package]
name = "agntcy-slimctl"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
description = "Rust implementation of the slimctl CLI."
build = "build.rs"

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types", "tonic-prost"]

[[bin]]
name = "slimctl"
path = "src/main.rs"

[dependencies]
agntcy-slim-config = { workspace = true }
agntcy-slim-controller = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
protoc-bin-vendored = { workspace = true }
tonic-prost-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
