[package]
name = "agntcy-protoc-slimrpc-plugin"
description = "A protoc plugin for generating SRPC (Slim RPC) code"
version = "1.0.0"
license.workspace = true
edition.workspace = true

[lib]
name = "agntcy_protoc_slimrpc_plugin"
path = "src/lib.rs"

[[bin]]
name = "protoc-gen-slimrpc-python"
path = "src/bin/protoc-gen-slimrpc-python.rs"

[[bin]]
name = "protoc-gen-slimrpc-go"
path = "src/bin/protoc-gen-slimrpc-go.rs"

[dependencies]
anyhow = { workspace = true }
heck = "0.5.0"
prost = "0.14"
prost-types = "0.14"
